--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "p_and_p.h": "c",
         "test_utils.h": "c",
         "ctype.h": "c",
-        "assert.h": "c"
+        "assert.h": "c",
+        "types.h": "c"
     }
 }
